[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0.219608, 0.258824, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.298039, 0.298039, 0.298039, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeControllerContainer" type="VBoxContainer" parent="Panel"]
margin_left = 14.3027
margin_top = 15.1361
margin_right = 100.303
margin_bottom = 49.1361
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TimeControllerContainer"]
margin_right = 86.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SpeedLabel" type="Label" parent="Panel/TimeControllerContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 58.0
margin_bottom = 14.0
text = "Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabelValue" type="Label" parent="Panel/TimeControllerContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 70.0
margin_bottom = 14.0
text = "$"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedHSlider" type="HSlider" parent="Panel/TimeControllerContainer"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 34.0
max_value = 3600.0
step = 60.0
value = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDisplayContainer" type="HBoxContainer" parent="Panel"]
margin_left = 267.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourLabelValue" type="Label" parent="Panel/TimeDisplayContainer"]
margin_left = 78.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 24.0
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSeperatorLabel" type="Label" parent="Panel/TimeDisplayContainer"]
margin_left = 90.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 24.0
text = ":"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteLabelValue" type="Label" parent="Panel/TimeDisplayContainer"]
margin_left = 98.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 24.0
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDesignationLabel" type="Label" parent="Panel/TimeDisplayContainer"]
margin_left = 110.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 24.0
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugTimeLabel" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 577.0
margin_right = 368.0
margin_bottom = 591.0
text = "Debug Active Time"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
margin_left = 14.0
margin_top = 65.0
margin_right = 385.0
margin_bottom = 530.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/Panel"]
margin_left = 22.0
margin_top = 17.0
margin_right = 342.0
margin_bottom = 456.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 39.0
margin_top = 4.0
margin_right = 85.0
margin_bottom = 18.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Energy:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_right = 320.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 20.0
margin_top = 31.0
margin_right = 85.0
margin_bottom = 45.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Alertness:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertnessProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 27.0
margin_right = 320.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 35.0
margin_top = 58.0
margin_right = 85.0
margin_bottom = 72.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Hunger:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HungerProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 54.0
margin_right = 320.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 41.0
margin_top = 85.0
margin_right = 85.0
margin_bottom = 99.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Mental"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MentalProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 81.0
margin_right = 320.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 29.0
margin_top = 112.0
margin_right = 85.0
margin_bottom = 126.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Hygiene:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HygieneProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 108.0
margin_right = 320.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 32.0
margin_top = 139.0
margin_right = 85.0
margin_bottom = 153.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Bladder:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BladderProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 135.0
margin_right = 320.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 44.0
margin_top = 166.0
margin_right = 85.0
margin_bottom = 180.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Social:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocialProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 162.0
margin_right = 320.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 8.0
margin_top = 193.0
margin_right = 85.0
margin_bottom = 207.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Entertained:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntertainedProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 189.0
margin_right = 320.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 30.0
margin_top = 220.0
margin_right = 85.0
margin_bottom = 234.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Comfort:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComfortProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 216.0
margin_right = 320.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="Panel/Panel/GridContainer"]
margin_top = 247.0
margin_right = 85.0
margin_bottom = 261.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Environment:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvironmentProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 243.0
margin_right = 320.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 29.0
margin_top = 274.0
margin_right = 85.0
margin_bottom = 288.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Physical:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhysicalProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 270.0
margin_right = 320.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 42.0
margin_top = 301.0
margin_right = 85.0
margin_bottom = 315.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Stress:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 297.0
margin_right = 320.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 14.0
margin_top = 328.0
margin_right = 85.0
margin_bottom = 342.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Happy Life:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyLifeProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 324.0
margin_right = 320.0
margin_bottom = 347.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 9.0
margin_top = 355.0
margin_right = 85.0
margin_bottom = 369.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Happy Now:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyNowProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 351.0
margin_right = 320.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 13.0
margin_top = 382.0
margin_right = 85.0
margin_bottom = 396.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Happy Day:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyDayProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 378.0
margin_right = 320.0
margin_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label16" type="Label" parent="Panel/Panel/GridContainer"]
margin_left = 1.0
margin_top = 409.0
margin_right = 85.0
margin_bottom = 423.0
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Happy Week:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HappyWeekProgressBar" type="ProgressBar" parent="Panel/Panel/GridContainer"]
margin_left = 89.0
margin_top = 405.0
margin_right = 320.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Panel/TimeControllerContainer/SpeedHSlider" to="." method="_on_SpeedHSlider_value_changed"]
